@@ -3,6 +3,8 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- encoding menu with "More"
+- fvm problems remain
 - nextLineRequested broken
 - s+click then s+click inside: deselect
 - no need to wait for requests after newFile()
